--- a/ex2_support/Makefile
+++ b/ex2_support/Makefile
@@ -7,7 +7,7 @@ LD=arm-none-eabi-gcc
 OBJCOPY=arm-none-eabi-objcopy
 
 CFLAGS=-mcpu=cortex-m3 -mthumb -g -std=c99 -Wall
-LDFLAGS=-mcpu=cortex-m3 -mthumb -g -lgcc -lc -lcs3 -lcs3unhosted -lefm32gg -Llib
+LDFLAGS=-mcpu=cortex-m3 -mthumb -g -lgcc -lc -lm -lcs3 -lcs3unhosted -lefm32gg -Llib
 ASFLAGS=-mcpu=cortex-m3 -mthumb -g
 LINKERSCRIPT=lib/efm32gg.ld
 
@@ -15,7 +15,7 @@ ex2.bin : ex2.elf
 	${OBJCOPY} -O binary $< $@
 
 ex2.elf : ex2.o timer.o dac.o gpio.o interrupt_handlers.o
-	${LD} -T ${LINKERSCRIPT} $^ -o $@ ${LDFLAGS} -lm
+	${LD} -T ${LINKERSCRIPT} $^ -o $@ ${LDFLAGS}
 
 %.o : %.c
 	${CC} ${CFLAGS} -c $< -o $@
