--- a/local_src/game-1.0/Makefile
+++ b/local_src/game-1.0/Makefile
@@ -1,24 +1,13 @@
-#
-# Simple development makefile
-#
+BIN := fbBreakout
+CC  := gcc
 
-#
-# add more flags here,
-# but don't remove the "+="
-#
-CFLAGS += -O2 -g -Wall #-Wsign-compare -Wfloat-equal -Wformat-security #-Werror
-CPPFLAGS +=
-LDFLAGS +=
+OBJS := main.o game.o
+CFLAGS := -Wall -O2
 
+.phony: clean
 
-all: game
+$(BIN): $(OBJS)
+	gcc $(CFLAGS) -o $@ $^
 
 clean:
-	-rm -f game
-
-install:
-
-
-.PHONY: all install clean
-
-# end of development makefile
+	-rm -f $(OBJS) $(BIN)
